--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
+    "dotenv": "4.0.0",
     "watson-developer-cloud": "2.32.1",
     "cfenv": "1.0.4",
     "multer": "1.3.0"
