--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "4.0.0",
     "watson-developer-cloud": "2.32.1",
     "cfenv": "1.0.4",
-    "multer": "1.3.0"
+    "multer": "1.3.0",
+    "alexa-app": "4.0.1"
   }
 }
